--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,6 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+/WalkieChatieServer/build/
+/WalkieChatieLibrary/build/
+/WalkieChatie/build/
