Added GUI for client, minor changes to library

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,6 @@ Temporary Items
 /WalkieChatieServer/build/
 /WalkieChatieLibrary/build/
 /WalkieChatie/build/
+/WalkieChatieLibrary/dist/
+/WalkieChatieServer/dist/
+/WalkieChatie/dist/
